--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "~4.9.x"
+    "body-parser": "^1.10.0",
+    "cookie-parser": "^1.3.3",
+    "express": "~4.9.x",
+    "express-session": "^1.9.3",
+    "jade": "^1.8.1",
+    "mongoose": "^3.8.20",
+    "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
+    "swig": "^1.4.2"
   },
   "engines": {
     "node": "0.10.x"
